Bug 410190 - Inconsistent virtual desktop numbering between Switch Window popup and taskbar
Summary: Inconsistent virtual desktop numbering between Switch Window popup and taskbar
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-25 10:20 UTC by Jonathan Marten
Modified: 2019-09-17 06:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen shot - Switch Window popup (14.48 KB, image/png)
2019-07-25 10:20 UTC, Jonathan Marten
Details
Screen shot - Taskbar popup (25.41 KB, image/png)
2019-07-25 10:21 UTC, Jonathan Marten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2019-07-25 10:20:07 UTC
There is an inconsistency in the numbering of virtual desktops between the Switch Window popup (built from plasma-workspace/containmentactions/switchwindow and configured by Configure Desktop - Mouse Actions and setting a button to activate the "Switch Window" popup) and the taskbar item RMB popup.

As seen in the attached screen shots, the Switch Window popup numbers the desktops starting from 0 while the taskbar popup numbers them starting from 1.  Since starting from 1 is the most natural choice to be presented to the user, I've assumed that the bug lies in the Switch Window popup and that it should number starting from 1 also.
Comment 1 Jonathan Marten 2019-07-25 10:20:55 UTC
Created attachment 121719 [details]
Screen shot - Switch Window popup
Comment 2 Jonathan Marten 2019-07-25 10:21:19 UTC
Created attachment 121720 [details]
Screen shot - Taskbar popup
Comment 3 Jonathan Marten 2019-07-25 10:22:31 UTC
This is with the Switch Window action configuration set to "Display all windows in one list".
Comment 4 Jonathan Marten 2019-07-25 15:19:30 UTC
https://phabricator.kde.org/D22740
Comment 5 Jonathan Marten 2019-09-17 06:32:28 UTC
Git commit eed2d620cbd55a74c8621f38ce224eda80731cc1 by Jonathan Marten.
Committed on 17/09/2019 at 06:25.
Pushed by marten into branch 'master'.

Consistent virtual desktop numbering between Switch Window popup and taskbar

The Switch Window popup menu originally numbered the desktops starting
from 0, in contrast to the KWin and Task Manager menus which start
from 1.  Adjust the Switch Window numbering to start from 1 also.

Do not use the internal desktop ID for this, on X11 it is indeed the
1-based desktop number but on Wayland it is a UUID string.

Differential Revision: https://phabricator.kde.org/D22740

M  +2    -2    containmentactions/switchwindow/switch.cpp

https://commits.kde.org/plasma-workspace/eed2d620cbd55a74c8621f38ce224eda80731cc1