Consistent virtual desktop numbering between Switch Window popup and taskbar

The Switch Window popup menu originally numbered the desktops starting
from 0, in contrast to the KWin and Task Manager menus which start
from 1.  Adjust the Switch Window numbering to start from 1 also.

Do not use the internal desktop ID for this, on X11 it is indeed the
1-based desktop number but on Wayland it is a UUID string.

BUG:410190

Differential Revision: https://phabricator.kde.org/D22740